# robotics-harness

./: AGENTS.md  Makefile  README.md
config/: README.md
docs/: architecture.md  conventions.md  roadmap.md
harness/: LOCKED.md  check.sh  clean-remote-meta.sh  deploy.sh  discovery-test.sh  doctor.sh  env.sh  inventory.yaml  lib.sh  lock-manifest.sha256  lock-verify.sh  (+4 more)
ros2_ws/src/pi_peripheral_lab/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/pi_peripheral_lab/config/: atlas_adc.yaml  atlas_can.yaml  atlas_dac.yaml  atlas_frequency_counter.yaml  atlas_gpio_output.yaml  atlas_handshake.yaml  atlas_i2c.yaml  atlas_joy_control.yaml  atlas_load_driver.yaml  atlas_pwm_scope.yaml  atlas_rs485.yaml  atlas_spi.yaml  atlas_uart.yaml  vector_handshake.yaml
ros2_ws/src/pi_peripheral_lab/docs/labs/: 01_pin_map_safety.md  02_gpio_output_input.md  03_function_generator_input.md  04_pwm_rc_filter.md  05_adc_sampling.md  06_dac_output.md  07_uart.md  08_spi.md  09_i2c.md  10_can.md  11_rs485.md  12_load_driver.md  13_ps5_controller.md
ros2_ws/src/pi_peripheral_lab/launch/: atlas_adc_reader.launch.py  atlas_can_sender.launch.py  atlas_dac_output.launch.py  atlas_frequency_counter.launch.py  atlas_gpio_output.launch.py  atlas_handshake_main.launch.py  atlas_i2c_probe.launch.py  atlas_joy_control.launch.py  atlas_load_driver.launch.py  atlas_pwm_scope.launch.py  atlas_rs485_sender.launch.py  atlas_spi_wave.launch.py  atlas_uart_tx.launch.py  vector_can_receiver.launch.py  vector_handshake_peer.launch.py  vector_rs485_receiver.launch.py  vector_uart_rx.launch.py
ros2_ws/src/pi_peripheral_lab/pi_peripheral_lab/: __init__.py  adc_reader_node.py  can_receiver_node.py  can_sender_node.py  circuit_models.py  dac_output_node.py  dry_gpio.py  frequency_counter_node.py  gpio_handshake_main_node.py  gpio_handshake_peer_node.py  gpio_output_node.py  hardware_adapters.py  i2c_probe_node.py  joy_control_mapper_node.py  load_driver_node.py  node_common.py  pin_map.py  protocol_bits.py  pwm_scope_node.py  rs485_receiver_node.py  rs485_sender_node.py  spi_wave_node.py  uart_rx_node.py  uart_tx_node.py  waveform.py
ros2_ws/src/pi_peripheral_lab/resource/: pi_peripheral_lab
ros2_ws/src/pi_peripheral_lab/test/: test_logic.py
ros2_ws/src/teleop_joy/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/teleop_joy/config/: dualsense_teleop.yaml
ros2_ws/src/teleop_joy/launch/: teleop_joy.launch.py
ros2_ws/src/teleop_joy/scripts/: multi_robot_teleop
ros2_ws/src/teleop_joy/teleop_joy/: __init__.py  multi_robot_teleop.py
ros2_ws/src/teleop_joy/test/: test_multi_robot_teleop.py
(+35 files in other folders)
